--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -1,18 +1,86 @@
+// Small tablets and large smartphones (landscape view)
+$screen-sm-min: 576px;
+
+// Small tablets (portrait view)
+$screen-md-min: 768px;
+
+// Tablets and small desktops
+$screen-lg-min: 992px;
+
+// Large tablets and desktops
+$screen-xl-min: 1200px;
+
+// Small devices
+@mixin sm {
+  @media (min-width: #{$screen-sm-min}) {
+      @content;
+  }
+}
+
+// Medium devices
+@mixin md {
+  @media (min-width: #{$screen-md-min}) {
+      @content;
+  }
+}
+
+// Large devices
+@mixin lg {
+  @media (min-width: #{$screen-lg-min}) {
+      @content;
+  }
+}
+
+// Extra large devices
+@mixin xl {
+  @media (min-width: #{$screen-xl-min}) {
+      @content;
+  }
+}
+
+
+.mainNav {
+    position: fixed;
+    width: 100%;
+    text-align: center;
+    background-color: (rgba($color: #000000, $alpha: .8));
+    margin-top: 56px;
+    display: none;
+
+}
+
 .nav-list {
+
+    padding-top: 4rem;
+    
+    list-style-type: none; 
     display: flex;
-    list-style-type: none;
-    margin: 0;
+    flex-direction: column;
+
+    @include lg {
+
+        display: flex;
+       
+        margin: 0;
+   
+    }
+
+
+
+
+    
 
     li {
         margin-top: 1rem;
         margin-bottom: 1rem;
     }
-}
+} 
 
 .title {
     color: #fff;
     font-size: 1rem;
     text-decoration: none;
+    
 }
 
 .nav-item {
@@ -20,6 +88,7 @@
     font-size: .9rem;
     margin-right: 1.3rem;
     text-decoration: none;
+    
     
 }
 
@@ -33,14 +102,15 @@
 
 .header {
     //outline: 1px solid red;
-    position: sticky;
+    position: fixed;
     top: 0;
     z-index: 2;
+    width: 100%;
     background-color: #000;
-    padding-left: 4rem;
+   // padding-left: 1rem;
     display: flex;
     justify-content: space-between;
-    padding-right: 4rem;
+    //padding-right: 1rem;
     
 
     h1 {
@@ -52,4 +122,82 @@
         font-size: .8rem;
         color: #333;
     }
+}
+
+.button {
+    display: block;
+    background-color: aquamarine;
+}
+
+
+
+
+///////////////////////////////////
+.ham {
+    display: inline-block;
+    margin-right: 5%;
+    padding: 0;
+    width: 56px;
+    height: 56px;
+    background-color: transparent;
+    border: none;
+
+    @include lg {
+        display: none;
+    }
+    
+}
+
+.mIcon,
+.mIcon:after,
+.mIcon:before {
+    height: 7px;
+    width: 100%;
+    border-radius: 3px;
+
+}
+
+.mIcon {
+    position: relative;
+    transform: translateY(1px);
+    background: aquamarine;
+    transition: all 0ms 300ms;
+
+    &.animate {
+        background: rgba(255, 255, 255, 0);
+    }
+}
+
+.mIcon:before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 15px;
+    background: aquamarine;
+    transition: bottom 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+
+}
+
+.mIcon:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 15px;
+    background: aquamarine;
+    transition: top 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+
+}
+
+.mIcon.animate:after {
+    top: 0;
+    transform: rotate(45deg);
+    background: red;
+    transition: top 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);;
+}
+
+.mIcon.animate:before {
+    bottom: 0;
+    transform: rotate(-45deg);
+    background: red;
+    transition: bottom 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);;
 }
