--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,9 +1,10 @@
 .background {
-    background-image: url('../images/angel.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    //background-image: url('../images/angel.jpg');
+    //background-size: cover;
+    //background-position: center;
+    //background-repeat: no-repeat;
     //background-attachment: fixed;
+    background-color: black;
     height: 60vh;
     width: 100%;
     position: absolute;
