--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -48,7 +48,8 @@
 
         h3 {
             text-align: center;
-            color: #fff;
+            color: #000;
+            
             text-underline-position: below;
             text-decoration-style: wavy;
             text-decoration: underline;
@@ -56,7 +57,7 @@
         }
 
         p {
-            color: #f4f4f4;
+            color: #000;
             max-width: 400px;
             margin: 0 auto;
         }
@@ -64,17 +65,17 @@
 
 }
 
-.flex > article:nth-child(1) { background-color: #292c2f;}
-.flex > article:nth-child(2) { background-color:#425664;}
-.flex > article:nth-child(3) { background-color: #001730;}
-.flex > article:nth-child(4) { background-color: #425664;}
-.flex > article:nth-child(5) { background-color: #001730;}
-.flex > article:nth-child(6) { background-color: #425664;}
+.flex > article:nth-child(1) { background-color: #fdfdfd;}
+.flex > article:nth-child(2) { background-color:#f4f4f4;}
+.flex > article:nth-child(3) { background-color: #fdfdfd;}
+.flex > article:nth-child(4) { background-color: #f4f4f4;}
+.flex > article:nth-child(5) { background-color: #fdfdfd;}
+.flex > article:nth-child(6) { background-color: #f4f4f4;}
 
 .more {
     text-decoration: none;
     border: 1px solid #9bf1ff;
-    color: white;
+    color: #000;
     padding: .4rem;
     display: block;
     max-width: 8rem;
@@ -88,4 +89,11 @@
     max-width: 400px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.social {
+    margin: 0 auto;
+    height: 3rem;
+    width: 3rem;
+    margin-bottom: 1rem;
 }
