--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,3 +1,15 @@
+
+// Tablets and small desktops
+$screen-lg-min: 992px;
+
+// Large devices
+@mixin lg {
+    @media (min-width: #{$screen-lg-min}) {
+        @content;
+    }
+  }
+
+
 .background {
     //background-image: url('../images/angel.jpg');
     //background-size: cover;
@@ -19,16 +31,24 @@
 
 
 .center {
-    margin-left: 4rem;
-
+    
+        margin-left: 2rem;
+        @include lg {
+            margin-left: 7%;
+        }
     h2 {
-        font-size: 4rem;
+        font-size: 2rem;
         
+        font-family: "amita";
+        
+        @include lg {
+            font-size: 4rem;
+        }
     }
 
     span {
         color: #39dae6;
-        font-style: italic;
+        font-family: "amita";
     }
 }
 
@@ -50,10 +70,10 @@
             text-align: center;
             color: #000;
             
-            text-underline-position: below;
-            text-decoration-style: wavy;
-            text-decoration: underline;
-            text-decoration-color: aquamarine;
+           // text-underline-position: below;
+            //text-decoration-style: wavy;
+            //text-decoration: underline;
+            //text-decoration-color: aquamarine;
         }
 
         p {
@@ -74,12 +94,14 @@
 
 .more {
     text-decoration: none;
-    border: 1px solid #9bf1ff;
-    color: #000;
+    border: 1px solid #000;
+    color: #fff;
+    background-color: #000;
     padding: .4rem;
     display: block;
     max-width: 8rem;
     margin-top: 2rem;
+    box-shadow: 0 30px 60px -10px rgba(0,0,0,0.3), 0 18px 36px -18px rgba(0,0,0,0.33);
    
 }
 
@@ -97,4 +119,5 @@
     width: 3rem;
     margin-bottom: 1rem;
     color: #39dae6;
+    
 }
