--- a/src/pages/about.module.scss
+++ b/src/pages/about.module.scss
@@ -32,6 +32,18 @@
     }
 }
 
-.flex {
-   
+.link {
+    width: 100%;
+    margin: 0 auto;
+    
+
+    a {
+        text-align: center;
+        text-decoration: none;
+        font-size: 2rem;
+        margin: 0 auto;
+        display: block;
+    }
+
+    
 }
