--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -22,7 +22,7 @@ $screen-xl-min: 1200px;
   @media (min-width: #{$screen-md-min}) {
       @content;
   }
-}
+} 
 
 // Large devices
 @mixin lg {
@@ -40,6 +40,7 @@ $screen-xl-min: 1200px;
 
 
 .mainNav {
+    display: none;
     position: fixed;
     width: 100%;
     text-align: center;
@@ -77,23 +78,26 @@ $screen-xl-min: 1200px;
 } 
 
 .title {
-    color: #fff;
-    font-size: 1rem;
-    text-decoration: none;
-    
+    margin-left: 5%;
+    padding-top: 3px;
 }
 
 .nav-item {
     color: #f4f4f4;
-    font-size: .9rem;
+    font-size: 1.3rem;
     margin-right: 1.3rem;
     text-decoration: none;
+    margin-top: 1rem;
     
     
 }
 
 .nav-item:hover {
     color: #666666;
+}
+
+.nav-item:focus {
+    outline: none;
 }
 
 .active-nav-item {
@@ -112,92 +116,89 @@ $screen-xl-min: 1200px;
     justify-content: space-between;
     //padding-right: 1rem;
     
+  h1 {        margin-bottom: 0;
+        color: #fff;    }
 
-    h1 {
-        margin-bottom: 0;
-        color: #fff;
-    }
-
-    p {
+   p {
         font-size: .8rem;
-        color: #333;
-    }
-}
+       color: #333;
+   }
+ }
 
-.button {
-    display: block;
-    background-color: aquamarine;
-}
-
-
+// .button {
+//     display: none;
+//     background-color: #39dae6;
+// }
 
 
-///////////////////////////////////
-.ham {
-    display: inline-block;
-    margin-right: 5%;
-    padding: 0;
-    width: 56px;
-    height: 56px;
-    background-color: transparent;
-    border: none;
 
-    @include lg {
-        display: none;
-    }
+
+// ///////////////////////////////////
+// .ham {
+//     display: none;
+//     margin-right: 5%;
+//     padding: 0;
+//     width: 56px;
+//     height: 56px;
+//     background-color: transparent;
+//     border: none;
+
+//     @include lg {
+//         display: none;
+//     }
     
-}
+// }
 
-.mIcon,
-.mIcon:after,
-.mIcon:before {
-    height: 7px;
-    width: 100%;
-    border-radius: 3px;
+// .mIcon,
+// .mIcon:after,
+// .mIcon:before {
+//     height: 7px;
+//     width: 100%;
+//     border-radius: 3px;
 
-}
+// }
 
-.mIcon {
-    position: relative;
-    transform: translateY(1px);
-    background: aquamarine;
-    transition: all 0ms 300ms;
+// .mIcon {
+//     position: relative;
+//     transform: translateY(1px);
+//     background: #39dae6;
+//     transition: all 0ms 300ms;
 
-    &.animate {
-        background: rgba(255, 255, 255, 0);
-    }
-}
+//     &.animate {
+//         background: rgba(255, 255, 255, 0);
+//     }
+// }
 
-.mIcon:before {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: 15px;
-    background: aquamarine;
-    transition: bottom 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+// .mIcon:before {
+//     content: "";
+//     position: absolute;
+//     left: 0;
+//     bottom: 15px;
+//     background: #39dae6;
+//     transition: bottom 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
 
-}
+// }
 
-.mIcon:after {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 15px;
-    background: aquamarine;
-    transition: top 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+// .mIcon:after {
+//     content: "";
+//     position: absolute;
+//     left: 0;
+//     top: 15px;
+//     background: #39dae6;
+//     transition: top 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
 
-}
+// }
 
-.mIcon.animate:after {
-    top: 0;
-    transform: rotate(45deg);
-    background: red;
-    transition: top 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);;
-}
+// .mIcon.animate:after {
+//     top: 0;
+//     transform: rotate(45deg);
+//     background: red;
+//     transition: top 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);;
+// }
 
-.mIcon.animate:before {
-    bottom: 0;
-    transform: rotate(-45deg);
-    background: red;
-    transition: bottom 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);;
-}
+// .mIcon.animate:before {
+//     bottom: 0;
+//     transform: rotate(-45deg);
+//     background: red;
+//     transition: bottom 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);;
+// }
