--- a/src/pages/about.module.scss
+++ b/src/pages/about.module.scss
@@ -47,3 +47,18 @@
 
     
 }
+
+
+//////////// HOURS ///////
+
+.table {
+    max-width: 300px;
+    margin: 0 auto;
+    
+    margin-bottom: 2rem;
+
+    td {
+        padding-top: 0;
+        padding-bottom: 0;
+    }
+}
