--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -39,7 +39,7 @@ $screen-xl-min: 1200px;
 }
 
 
-.mainNav {
+.mainNav { 
     display: none;
     position: fixed;
     width: 100%;
@@ -106,11 +106,11 @@ $screen-xl-min: 1200px;
 
 .header {
     //outline: 1px solid red;
-    position: fixed;
+    position: sticky;
     top: 0;
     z-index: 2;
     width: 100%;
-    background-color: #000;
+    background-color: #20341b;
    // padding-left: 1rem;
     display: flex;
     justify-content: space-between;
