--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -63,6 +63,7 @@ html {
     margin: 0;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    background-color: #fdfdfd;
   }
   article,
   aside,
