--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -19,7 +19,8 @@ $screen-lg-min: 992px;
     //background-position: center;
     //background-repeat: no-repeat;
     //background-attachment: fixed;
-    background-color: #20341b;
+    background-color: #292c2f;
+    //background-color: #20341b;
     height: 46vh;
     width: 100%;
     position: absolute;
