--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -110,7 +110,8 @@ $screen-xl-min: 1200px;
     top: 0;
     z-index: 2;
     width: 100%;
-    background-color: #20341b;
+    background-color: #292c2f;
+    //background-color: #20341b;
    // padding-left: 1rem;
     display: flex;
     justify-content: space-between;
