--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -21,6 +21,7 @@ $screen-lg-min: 992px;
     //background-attachment: fixed;
     background-color: #292c2f;
     //background-color: #20341b;
+    //background-color: #fff;
     height: 46vh;
     width: 100%;
     position: absolute;
