new footer, header style, contact form

--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -1,10 +1,50 @@
+// Small tablets and large smartphones (landscape view)
+$screen-sm-min: 576px;
+
+// Small tablets (portrait view)
+$screen-md-min: 768px;
+
+// Tablets and small desktops
+$screen-lg-min: 992px;
+
+// Large tablets and desktops
+$screen-xl-min: 1200px;
+
+// Small devices
+@mixin sm {
+  @media (min-width: #{$screen-sm-min}) {
+      @content;
+  }
+}
+
+// Medium devices
+@mixin md {
+  @media (min-width: #{$screen-md-min}) {
+      @content;
+  }
+} 
+
+// Large devices
+@mixin lg {
+  @media (min-width: #{$screen-lg-min}) {
+      @content;
+  }
+}
+
+// Extra large devices
+@mixin xl {
+  @media (min-width: #{$screen-xl-min}) {
+      @content;
+  }
+}
+
 .footer {
-    font-size: 2rem;
-    margin-top: 4rem;
+   
+    background-color: #292c2f;
 }
 
 .main {
-    background-color: #292c2f;
+    
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
@@ -23,10 +63,15 @@
 
     ul {
         list-style-type: none;
+        margin: 0 auto;
+        display: inline-block;
     }
 
     li {
         text-decoration: none;
+        display: flex;
+        direction: column;
+        width: fit-content;
     }
 
     a {
@@ -47,13 +92,77 @@
     min-width: 300px;
     flex-wrap: wrap;
     text-align: center;
+
+    @include lg {
+        padding-left: 5%;
+        padding-right: 5%;
+    }
     
 
 }
 
 .social {
     color: #39dae6;
-    height: 2rem;
-    width: 2rem;
+    height: 1rem;
+    width: 1rem;
+    margin-right: 6px;
+}
+
+.left {
+    text-align: left;
+    margin-top: 3rem;
+    margin-left: auto;
+    margin-right: auto;
+    display: inline-block;
+    a {
+        display: inline-block;
+        margin-top: .5rem;
+    }
+}
+
+.contact {
+    display: flex;
+    flex-direction: column;
+    background: transparent;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    input, textarea {
+        border: 1px solid #39dae6;
+        border-radius: 10px;
+        background: transparent;
+        margin-bottom: 1rem;
+        color: #fff;
+        padding: 5px 8px 5px 8px;
+        
+    }
+    ::placeholder {
+        color: #fff;
+        opacity: 1;
+        padding-left: 8px;
+        padding-right: 8px;
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+
+    label {
+        text-align: left;
+        color: #fff;
+    }
+
+    .sendbutton {
+        background: #1e7f86;
+        border: transparent;
+        transition: .5s ease-in-out all;
+    }
+
+    .sendbutton:hover {
+        background: #39dae6;
+        
+    }
     
+
+    textarea {
+        min-height: 9rem;
+    }
+
 }
