--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -8,8 +8,13 @@ $screen-lg-min: 992px;
         @content;
     }
   }
-:root {
+  :root {
     --ease-in-quad: cubic-bezier(0.55,0.085,0.68,0.53);
+    --ease-in-quart: cubic-bezier(0.895,0.03,0.685,0.22);
+    --ease-out-quad: cubic-bezier(0.25,0.46,0.45,0.94);
+    --ease-out-quart: cubic-bezier(0.165,0.84,0.44,1);
+    --ease-in-out-quad: cubic-bezier(0.455,0.03,0.515,0.955);
+    --ease-in-out-quart: cubic-bezier(0.77,0,0.175,1);
 }
   
 
@@ -22,13 +27,15 @@ $screen-lg-min: 992px;
     background-color: #292c2f;
     //background-color: #20341b;
     //background-color: #fff;
-    height: 36vh;
+    //height: 36vh;
     width: 100%;
-    position: absolute;
-    top: 0;
-    z-index: -1;
-    padding-top: 4rem;
+    //position: absolute;
+    //top: 0;
+    //z-index: -1;
+    //padding-top: 4rem;
     color: #e0ffff;
+    padding-bottom: 3rem;
+    padding-top: 2rem;
 }
 
 
@@ -80,8 +87,8 @@ $screen-lg-min: 992px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    margin-top: 35vh;
-    
+    //margin-top: 35vh;
+    padding-top: 3rem;
     
     @include lg {
         padding-left: 5%;
@@ -130,14 +137,17 @@ $screen-lg-min: 992px;
     display: block;
     max-width: 8rem;
     margin-top: 2rem;
-    box-shadow: 0 30px 60px -10px rgba(0,0,0,0.3), 0 18px 36px -18px rgba(0,0,0,0.33);
-    //transition: transform 0.3s var(--ease-out-quad),box-shadow 0.3s var(--ease-out-quad);
-    transition: ease-in-out all .5s;
+    margin-bottom: 2rem;
+    box-shadow: 0 20px 60px -5px rgba(0,0,0,0.3), 0 7px 36px -10px rgba(0,0,0,0.33);
+    transition: transform 0.3s var(--ease-out-quad), box-shadow 0.3s var(--ease-out-quad);
+    //transition: ease-in-out all .5s;
 }
 
 .more:hover {
-    background-color: #39dae6;
-    color: #000;
+    //background-color: #39dae6;
+    //color: #000;
+    transform: translateY(-1px);
+    box-shadow: 0 30px 80px 3px rgba(0,0,0,0.3), 0 20px 50px -10px rgba(0,0,0,0.3);
 }
 
 .morec {
