--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -164,12 +164,12 @@ $screen-lg-min: 992px;
     width: 3rem;
     margin-bottom: 1rem;
     color: #39dae6;
-    transition: ease-in-out all .5s;
-    
+    //transition: ease-in-out all .5s;
+   
 }
 
 .social:hover {
-    background: #39dae6;
+    //background: #39dae6;
 }
 
 .greenish {
