--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -49,7 +49,7 @@ $screen-lg-min: 992px;
         @include lg {
             //margin-left: 7%;
         }
-    h2 {
+    h2  {
         font-size: 2rem;
         color: #fffacd;
         //#b1813a
@@ -72,6 +72,7 @@ $screen-lg-min: 992px;
         max-width: 500px;
         margin: 0 auto;
         color: #f4f4f4;
+        font-size: 1rem;
     }
 
    
@@ -102,7 +103,7 @@ $screen-lg-min: 992px;
         display: flex;
         flex-direction: column;
 
-        h3 {
+        h3, h2 {
             text-align: center;
             color: #000;
             
