Front page card changes

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -99,10 +99,14 @@ $screen-lg-min: 992px;
         min-width: 350px;
         min-height: 400px;
         flex: 1;
-        padding: 2rem;
+        padding: 2rem 1rem 2rem 1rem;
+        border-radius: 3px;
+        margin: 1rem;
         display: flex;
         flex-direction: column;
-
+        box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 5px 0px, rgba(0, 0, 0, 0.14) 0px 2px 2px 0px, rgba(0, 0, 0, 0.12) 0px 3px 1px -2px;
+        margin-bottom: 2rem;
+        transition: all 0.3s ease 0s;
         h3, h2 {
             text-align: center;
             color: #000;
@@ -118,8 +122,20 @@ $screen-lg-min: 992px;
             max-width: 400px;
             margin: 0 auto;
         }
+
+
     }
 
+    article:hover {
+        box-shadow: rgba(0, 0, 0, 0.09) 0px 8px 26px 0px;
+    transition: all 0.3s ease 0s;
+    }
+
+}
+
+.fbcon {
+    
+    
 }
 
 .inline {
