--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -36,6 +36,8 @@ $screen-lg-min: 992px;
     color: #e0ffff;
     padding-bottom: 3rem;
     padding-top: 2rem;
+    border-bottom-left-radius: 100px;
+    border-bottom-right-radius: 100px;
 }
 
 
@@ -89,14 +91,14 @@ $screen-lg-min: 992px;
     flex-direction: row;
     flex-wrap: wrap;
     //margin-top: 35vh;
-    padding-top: 3rem;
-    
+    justify-content: center;
+    padding-top: 4.5rem;
     @include lg {
         padding-left: 5%;
         padding-right: 5%;
     }
     article {
-        min-width: 350px;
+        min-width: 330px;
         min-height: 400px;
         flex: 1;
         padding: 2rem 1rem 2rem 1rem;
@@ -107,10 +109,15 @@ $screen-lg-min: 992px;
         box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 5px 0px, rgba(0, 0, 0, 0.14) 0px 2px 2px 0px, rgba(0, 0, 0, 0.12) 0px 3px 1px -2px;
         margin-bottom: 2rem;
         transition: all 0.3s ease 0s;
+
+        @include lg {
+            min-width: 390px;
+            max-width: 500px;
+        }
         h3, h2 {
             text-align: center;
             color: #000;
-            
+            font-size: 2rem;
            // text-underline-position: below;
             //text-decoration-style: wavy;
             //text-decoration: underline;
@@ -191,7 +198,7 @@ $screen-lg-min: 992px;
 
 .morec {
     margin-top: auto;
-    margin-bottom: 2rem;
+    margin-bottom: 0;
     max-width: 400px;
     margin-left: auto;
     margin-right: auto;
