Changed fb sizing and added fb container sizing

--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -41,7 +41,7 @@ $screen-xl-min: 1200px;
 .footer {
    
     background-color: #292c2f;
-    margin-top: 2rem;
+    margin-top: 3rem;
 }
 
 .main {
@@ -80,14 +80,14 @@ $screen-xl-min: 1200px;
         color: #e1e8f1;
     }
     a:hover {
-        color: #fff;
+        color: #39dae6;
     }
 
   
 }
 
 .main > * {
-    padding-top: 4rem;
+    padding-top: 5rem;
     padding-bottom: 2rem;
     flex: 1;
     min-width: 300px;
