--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -83,7 +83,7 @@ $screen-xl-min: 1200px;
 }
 
 .nav-item {
-    color: #f4f4f4;
+    color: #39dae6;
     font-size: 1.3rem;
     margin-right: 1.3rem;
     text-decoration: none;
@@ -93,7 +93,7 @@ $screen-xl-min: 1200px;
 }
 
 .nav-item:hover {
-    color: #666666;
+    color: #5eecf7;
 }
 
 .nav-item:focus {
