--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -37,7 +37,7 @@ $screen-lg-min: 992px;
     padding-bottom: 3rem;
     padding-top: 2rem;
     border-bottom-left-radius: 100px;
-    border-bottom-right-radius: 100px;
+    border-bottom-right-radius: 150px;
 }
 
 
@@ -118,6 +118,8 @@ $screen-lg-min: 992px;
             text-align: center;
             color: #000;
             font-size: 2rem;
+            font-family: 'amita';
+            font-weight: bold;
            // text-underline-position: below;
             //text-decoration-style: wavy;
             //text-decoration: underline;
@@ -141,7 +143,8 @@ $screen-lg-min: 992px;
 }
 
 .fbcon {
-    
+    width: 340px;
+    margin: 0 auto;
     
 }
 
