Changed fb width again

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -143,9 +143,13 @@ $screen-lg-min: 992px;
 }
 
 .fbcon {
-    width: 340px;
+    max-width: 500px;
+    min-width: 300px;
     margin: 0 auto;
     
+    @include lg {
+        min-width: 350px;
+    }
 }
 
 .inline {
