Changed header border radious back

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -37,7 +37,7 @@ $screen-lg-min: 992px;
     padding-bottom: 3rem;
     padding-top: 2rem;
     border-bottom-left-radius: 100px;
-    border-bottom-right-radius: 150px;
+    border-bottom-right-radius: 100px;
 }
 
 
@@ -138,6 +138,7 @@ $screen-lg-min: 992px;
     article:hover {
         box-shadow: rgba(0, 0, 0, 0.09) 0px 8px 26px 0px;
     transition: all 0.3s ease 0s;
+    background-color: #fff;
     }
 
 }
