--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -8,7 +8,7 @@ $screen-md-min: 768px;
 $screen-lg-min: 992px;
 
 // Large tablets and desktops
-$screen-xl-min: 1200px;
+$screen-xl-min: 1200px; 
 
 // Small devices
 @mixin sm {
@@ -111,6 +111,8 @@ $screen-xl-min: 1200px;
     z-index: 2;
     width: 100%;
     background-color: #292c2f;
+    //background-color: rgba(255, 255, 255, .9);
+    
     //background-color: #20341b;
    // padding-left: 1rem;
     display: flex;
